--- a/module/styles/theme.less
+++ b/module/styles/theme.less
@@ -7,13 +7,13 @@ Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are
 met:
 
- * Redistributions of source code must retain the above copyright
+    * Redistributions of source code must retain the above copyright
 notice, this list of conditions and the following disclaimer.
- * Redistributions in binary form must reproduce the above
+    * Redistributions in binary form must reproduce the above
 copyright notice, this list of conditions and the following disclaimer
 in the documentation and/or other materials provided with the
 distribution.
- * Neither the name of Google Inc. nor the names of its
+    * Neither the name of Google Inc. nor the names of its
 contributors may be used to endorse or promote products derived from
 this software without specific prior written permission.
 
@@ -29,17 +29,10 @@ THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
- */
+*/
 
-//var ZemantaExtension = {};
+// LESS styles
+// For documentation, see http://lesscss.org/
 
-// formatting strings - passing arguments
-String.format = function format(string) {
-      var args = arguments;
-      var pattern = new RegExp("%([0-9]+)", "g");
-      return String(string).replace(pattern, function(match, index) {
-        if (index == 0 || index >= args.length)
-          throw "Invalid index in format string";
-        return args[index];
-      });
-};
+@import-less url("../../../../main/webapp/modules/core/styles/theme.less");
+
